# py-hamt

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Architecture.md  CLAUDE.md  README.md  bit_utils.py  bit_utils_test.py  fsgs.py  iamap.py  public_gateway_example.py  pyproject.toml  run-checks.sh  setup.cfg  test.py
.github/workflows/: check-linting-formatting.yaml  pages-main.yaml  pages-preview.yaml  run-checks.yaml  run-tests.yaml
examples/: ipfs_store.py  memory-store.py
performance_tests/: cache_with_ipfsstore.py
py_hamt/: __init__.py  bit_utils.py  dict_store.py  encryption_codec.py  encryption_hamt_store.py  ensemble_hamt.py  flat_zarr_store.py  hamt.py  hamt_to_sharded_converter.py  iamap.py  instrumentation.py  ipfszarr3.py  manage_pins.py  sharded_zarr_store.py  store.py  store_httpx.py  zarr_encryption_transformer.py  zarr_encryption_transformers.py  zarr_hamt_store.py
test/: bit_utils_test.py  test_bit_utils.py
tests/: conftest.py  performance_tests.py  test_async.py  test_benchmark_stores.py  test_bit_utils.py  test_branch_anchors.py  test_converter.py  test_cpc_compare.py  test_extract_bits.py  test_hamt.py  test_instrumentation.py  test_ipfsstore.py  test_kubo_cas.py  test_kubo_pin.py  test_kubocas_auth.py  test_kubocas_session.py  test_node.py  test_performance_tests.py  test_public_gateway.py  test_read_only_guards.py  test_sharded_store_deleting.py  test_sharded_store_grafting.py  test_sharded_store_resizing.py  test_sharded_zarr_pinning.py  test_sharded_zarr_store.py  test_sharded_zarr_store_coverage.py  test_stores.py  test_with_read_only.py  test_zarr_encryption_ipfs.py  test_zarr_ipfs.py  test_zarr_ipfs_encrypted.py  test_zarr_ipfs_partial.py  testing_utils.py
