[project]
name = "py-hamt"
version = "2.4.1"
description = "HAMT implementation for an abstract backing store"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "dag-cbor>=0.3.3",
    "msgspec>=0.18.6",
    "multiformats[full]>=0.3.1.post4",
    "pycryptodome>=3.21.0",
    "requests>=2.32.3",
    "zarr>=3.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hypothesis>=6.115.5",
    "memray>=1.14.0",
    "pdoc>=15.0.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
    "snakeviz>=2.2.0",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "pytest-asyncio>=0.25.3",
    "xarray>=2025.3.0",
]
