[project]
name = "py-hamt"
version = "3.2.0"
description = "HAMT implementation for a content-addressed storage system."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]>=0.28.1",
    "dag-cbor>=0.3.3",
    "msgspec>=0.18.6",
    "multiformats[full]>=0.3.1.post4",
    "zarr>=3.0.8",
    "pycryptodome>=3.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hypothesis>=6.115.5",
    "memray>=1.14.0",
    "pdoc>=15.0.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
    "snakeviz>=2.2.0",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "pytest-asyncio>=0.25.3",
    "xarray[complete]>=2025.3.0",
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.3.250527",
    "docker>=7.1.0",
    "types-docker>=7.1.0.20250523",
    "pre-commit>=4.2.0",
]

[tool.ruff]
lint.extend-select = ["I"]
