

# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://packaging.python.org/en/latest/guides/distributing-packages-using-setuptools/#setup-cfg


[metadata]
name = py-hamt
author = Evan Schechter
url = https://github.com/dClimate/py-iamap

[options]
packages = find:
python_requires = >=3.8

[options.extras_require]
dev = 
    flake8
    black

[options.package_data]
* = py.typed, *.json

[options.packages.find]
exclude = test

[flake8]
max-line-length = 119

[tool.black]
line-length = 119
